--- a/client/parkings.html
+++ b/client/parkings.html
@@ -3,11 +3,36 @@
 </head>
 
 <body>
-  {{> hello}}
-</body>
+    <div class="page-container">
+        <div class="container">
+            <div class="row row-offcanvas row-offcanvas-left">
+                {{> imported_data}}
+            </div>
+        </div>
+    </div></body>
 
-<template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click" />
+<template name="imported_data">
+    <div class="container">
+        <div class="row">
+            <div class="page-header"><h2>List of parkings</h2></div>
+        </div>
+        <div class="span12">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Location name</th>
+                        <th>Coordinates</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{#each parkings}}
+                    <tr>
+                        <td>{{LOCATION}}</td>
+                        <td>{{COORDINATES}}</td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </div>
+    </div>
 </template>
