--- a/client/parkings.html
+++ b/client/parkings.html
@@ -22,6 +22,13 @@
     </div>
 </template>
 
+<template name="infoWindowContent">
+    <h2>{{title}}</h2>
+    <p><b>Coordinates:</b> {{coord}}</p>
+    <p><b>Address:</b> {{address}}</p>
+    <p><b>Status:</b> {{status}}</p>
+</template>
+
 <template name="imported_data">
     <div class="container">
         <div class="row">
